Fix project structure and configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
             "src": "/(.*)",
             "dest": "每日一学.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": "."
+    }
 }
