--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.py"
+            "dest": "/api/index.py"
         }
-    ],
-    "env": {
-        "PYTHONPATH": "."
-    }
+    ]
 }
