--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,9 @@
             "src": "/(.*)",
             "dest": "/api/index.py"
         }
-    ]
+    ],
+    "env": {
+        "FLASK_APP": "api/index.py",
+        "FLASK_ENV": "production"
+    }
 }
