Simplify Flask app with inline template

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,7 @@
     "builds": [
         {
             "src": "wsgi.py",
-            "use": "@vercel/python",
-            "config": { 
-                "maxLambdaSize": "15mb",
-                "includeFiles": "templates/**",
-                "runtime": "python3.9"
-            }
+            "use": "@vercel/python"
         }
     ],
     "routes": [
@@ -16,9 +11,5 @@
             "src": "/(.*)",
             "dest": "wsgi.py"
         }
-    ],
-    "env": {
-        "FLASK_APP": "api/index.py",
-        "FLASK_ENV": "production"
-    }
+    ]
 }
